--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ http://www.templatemo.com/tm-481-elevate
                 
                 <section id="home" class="tm-content-box tm-banner margin-b-10">
                     <div class="tm-banner-inner">
-                        <h1 class="tm-banner-title">Elevate</h1>
-                        <p class="tm-banner-text">free bootstrap 4.0 layout <br>by templatemo</p>    
+                        <h1 class="tm-banner-title">Asuka</h1>
+                        <p class="tm-banner-text">Japanese, English, Spanish <br>From JAPAN </p>    
                     </div>                    
                 </section>
 
