--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ http://www.templatemo.com/tm-481-elevate
                     <div class="tm-content-box flex-2-col">
                         
                         <div class="pad flex-item tm-team-description-container">
-                            <h2 class="tm-section-title">Our Team</h2>
+                            <h2 class="tm-section-title">Who I am</h2>
                             <p class="tm-section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel nisi pharetra nibh varius pharetra ac sagittis nisi. Etiam pharetra vestibulum hendrerit.</p>
                             <p class="tm-section-description">Donec ex libero, fringilla vitae purus sit amet, rhoncus pharetra lorem. Pellentesque id sem id lacus ultricies vehicula. Aliquam rutrum mi non.</p>    
                         </div>
