--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ http://www.templatemo.com/tm-481-elevate
                         
                         <div class="pad flex-item tm-team-description-container">
                             <h2 class="tm-section-title">Who I am</h2>
-                            <p class="tm-section-description">4th　April 2002.</p>
-                            <p class="tm-section-description">Donec ex libero, fringilla vitae purus sit amet, rhoncus pharetra lorem. Pellentesque id sem id lacus ultricies vehicula. Aliquam rutrum mi non.</p>    
+                            <p class="tm-section-description">I was born on 4th April, 2002 in Chiba, Japan. I'm a student at the University in Tokyo.</p>
+                            <p class="tm-section-description">I've loved Miley Cyrus since I was a little girl. She made me start to study english, and　to take an interest in　foreign cultures. </p>    
                         </div>
                         <div class="flex-item">
                             <img src="img/about.jpg" alt="">    
