--- a/index.html
+++ b/index.html
@@ -66,28 +66,28 @@ http://www.templatemo.com/tm-481-elevate
                         
                         <ul class="boxes gallery-container">
                             <li class="box box-bg">
-                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">Creative</h2>
+                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">Let everything happen to you</h2>
                                 <img src="img/white-bg.jpg" alt="Image" class="img-fluid">
                             </li>
                             <li class="box">
                                 <a href="img/idea-large-01.jpg"><img src="img/idea-01.jpg" alt="Image" class="img-fluid"></a>
                             </li>
                             <li class="box box-bg">
-                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">Develop</h2>
+                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">Beauty and terror</h2>
                                 <img src="img/white-bg.jpg" alt="Image" class="img-fluid">
                             </li>
                             <li class="box">
                                 <a href="img/idea-large-02.jpg"><img src="img/idea-02.jpg" alt="Image" class="img-fluid"></a>
                             </li>
                             <li class="box box-bg">
-                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">Design</h2>
+                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">Just keep going</h2>
                                 <img src="img/white-bg.jpg" alt="Image" class="img-fluid">
                             </li>
                             <li class="box">
                                 <a href="img/idea-large-03.jpg"><img src="img/idea-03.jpg" alt="Image" class="img-fluid"></a>
                             </li>
                             <li class="box box-bg">
-                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">Support</h2>
+                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">No feeling is no ending</h2>
                                 <img src="img/white-bg.jpg" alt="Image" class="img-fluid">
                             </li>
                             <li class="box">
