--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ http://www.templatemo.com/tm-481-elevate
                                 <a href="img/idea-large-04.jpg"><img src="img/idea-04.jpg" alt="Image" class="img-fluid"></a>
                             </li>
                             <li class="box box-bg">
-                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">Think</h2>
+                                <h2 class="tm-section-title tm-section-title-box tm-box-bg-title">by Rilke</h2>
                                 <img src="img/white-bg.jpg" alt="Image" class="img-fluid">
                             </li>
                         </ul>
