--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ http://www.templatemo.com/tm-481-elevate
                             <div class="carousel-item active">
                                 <div class="carousel-content">
                                     <div class="flex-item">
-                                        <h2 class="tm-section-title">Our Ideas</h2>
-                                        <p class="tm-section-description carousel-description">Suspendisse fermentum auctor turpis quis volutpat. Ut sed nibh non purus porta lacinia. Donec et euismod elit. Aenean vitae quam leo. Pellentesque interdum metus sed massa rutrum.</p>
+                                        <h2 class="tm-section-title">My goals</h2>
+                                        <p class="tm-section-description carousel-description">I'll try hard to earn DELE B2.¡Ánimo!</p>
                                     </div>
                                 </div>                               
                             </div>
@@ -127,7 +127,7 @@ http://www.templatemo.com/tm-481-elevate
                             <div class="carousel-item">
                                 <div class="carousel-content">
                                     <div class="flex-item">
-                                        <h2 class="tm-section-title">Our Clients</h2>
+                                        <h2 class="tm-section-title">In Japan</h2>
                                         <p class="tm-section-description carousel-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel nisi pharetra nibh varius pharetra ac sagittis nisi. Etiam pharetra vestibulum hendrerit. Pellentesque interdum metus sed massa rutrum.</p>
                                     </div>
                                 </div>                                
@@ -136,7 +136,7 @@ http://www.templatemo.com/tm-481-elevate
                             <div class="carousel-item">
                                 <div class="carousel-content">
                                     <div class="flex-item">
-                                        <h2 class="tm-section-title">Our Projects</h2>
+                                        <h2 class="tm-section-title">In Spain</h2>
                                         <p class="tm-section-description carousel-description">Donec ex libero, fringilla vitae purus sit amet, rhoncus pharetra lorem. Pellentesque id sem id lacus ultricies vehicula. Aliquam rutrum mi non. Pellentesque interdum metus sed massa rutrum.</p>
                                     </div>
                                 </div>                                
