--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ http://www.templatemo.com/tm-481-elevate
                             <div class="carousel-item">
                                 <div class="carousel-content">
                                     <div class="flex-item">
-                                        <h2 class="tm-section-title">In Japan</h2>
-                                        <p class="tm-section-description carousel-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel nisi pharetra nibh varius pharetra ac sagittis nisi. Etiam pharetra vestibulum hendrerit. Pellentesque interdum metus sed massa rutrum.</p>
+                                        <h2 class="tm-section-title">INSPIRATION</h2>
+                                        <p class="tm-section-description carousel-description">Miley Cyrus and Rosalía are my queen! Always they inspire me and also various architectures. They make me feel "萌え[moe]", like "loooooove!!!".</p>
                                     </div>
                                 </div>                                
                             </div>
