--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ http://www.templatemo.com/tm-481-elevate
                             <div class="carousel-item">
                                 <div class="carousel-content">
                                     <div class="flex-item">
-                                        <h2 class="tm-section-title">In Spain</h2>
-                                        <p class="tm-section-description carousel-description">Donec ex libero, fringilla vitae purus sit amet, rhoncus pharetra lorem. Pellentesque id sem id lacus ultricies vehicula. Aliquam rutrum mi non. Pellentesque interdum metus sed massa rutrum.</p>
+                                        <h2 class="tm-section-title">MY DREAM</h2>
+                                        <p class="tm-section-description carousel-description">I want to take a trip all over the world. I want to go to Cuba, Mexico, Peru, Batbados, Italy, Russia, Norway, Estonia, Austria, Belgium, Germany, Ukraine, Moldova, Georgia, Greece, Portuga, UK, Turkey, Syria, iraq, Israel, Uzbekistan, Iran, and Afghanistan.　I think that I need live to the age of 150, because there is just sooo much else I want to do!</p>
                                     </div>
                                 </div>                                
                             </div>
