--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ http://www.templatemo.com/tm-481-elevate
                 <img src="img/menu-top.jpg" alt="Menu top image" class="img-fluid tm-sidebar-image">
                 <nav class="tm-main-nav">
                     <ul>
-                        <li class="tm-nav-item"><a href="#About" class="tm-nav-item-link">Home</a></li>
-                        <li class="tm-nav-item"><a href="#Motto" class="tm-nav-item-link">About</a></li>
-                        <li class="tm-nav-item"><a href="#Others" class="tm-nav-item-link">Ideas</a></li>
+                        <li class="tm-nav-item"><a href="#About" class="tm-nav-item-link">About</a></li>
+                        <li class="tm-nav-item"><a href="#Motto" class="tm-nav-item-link">Motto</a></li>
+                        <li class="tm-nav-item"><a href="#Others" class="tm-nav-item-link">Others</a></li>
                         <li class="tm-nav-item"><a href="#contact" class="tm-nav-item-link">Contact</a></li>
                     </ul>
                 </nav>
