--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ http://www.templatemo.com/tm-481-elevate
                                 <div class="carousel-content">
                                     <div class="flex-item">
                                         <h2 class="tm-section-title">My goals</h2>
-                                        <p class="tm-section-description carousel-description">I'll try hard to earn DELE B2.¡Ánimo!</p>
+                                        <p class="tm-section-description carousel-description">I'll try to earn DELE B2. 
+                                        ¡Ánimo!</p>
                                     </div>
                                 </div>                               
                             </div>
