--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ http://www.templatemo.com/tm-481-elevate
                             <p class="tm-section-description">I've loved Miley Cyrus since I was a little girl. She made me start to study english, and to take an interest in　foreign cultures. </p>    
                         </div>
                         <div class="flex-item">
-                            <img src="cut1-249.jpg"width=“300"height=“200” >    
+                            <img src="cut1-249.jpg"alt="Image" class="img-fluid" >    
                         </div>                       
                         
 
