--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ http://www.templatemo.com/tm-481-elevate
                             <p class="tm-section-description">I've loved Miley Cyrus since I was a little girl. She made me start to study english, and to take an interest in　foreign cultures. </p>    
                         </div>
                         <div class="flex-item">
-                            <img src="cut1-249.jpg"alt="" >    
+                            <img src="https://lh3.googleusercontent.com/2XexSB_d9tKCKH3lg4a7ZigvU-uOOlQu0pvj36aWhrDsQxPtBrsKqVsIEbnTIlPROgjWXjADp1WStB0lOxVqxypwAlD2c9IRrhP-oKZLZIKi4QzMipuqDmrjL_k87zcDF4nloHi_5EfSuM59kO5nxzN3RuF_kslVmsDMSW9oAa8beh90JM9m4GqRsIVPhT0AMmJr_aDfpXh25DhCZyog7i18ZVcPEY1ffIEW9JFls1dBWLyEFfnXoQfO4-NIzDIYSP0ZzK1W42dgJRzVi2R5w-ufIrjUijwDdkLXgghBOrkYD0uS9nOlLaFD4izJB6wsbAK0vSEE5S81pWrtG7nOY-irJ05SAU7Kl9PFIHb3jJvM9QcR14VFSukC_393oF9h1F7HSlxu1iK3-v-yo8j7YdFROuBuVUW3LqScK3dbcPwFC69LqzdXBOi4J5u_lyT442gVwrDVOidPB_Q-Uu_kxMihoEznrWaWZ8cAw4TJ_v_LuX8sBxNNDI-9zTOfdCVzEkzz_rEeEw9vOv3Xow8Xtqr6GtbqGR7JUU-Ew-Vmf_aWGqfAv8S9MCToJ9XjD2EnICqalfusIXCCIrpVObxFmQqC3so04F32Lw0ln0VDygLvxKghRi6oByt7ISHhVaCMFjUFmpop-BJhlvaYL7DPVh5LdvWbySCymdodOoHfW3IRHRCIGFG27X4nbUbDxw_12e34p3sNvQAsjmFSnMy9kGlB=w417-h627-no?authuser=0"alt="" >    
                         </div>                       
                         
 
