--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ http://www.templatemo.com/tm-481-elevate
                 </section>
 
                 <section class="tm-content-box">
-                    <img src="https://lh3.googleusercontent.com/XihAs4VfQk0uzhxVpFYsCwymW1cuz2afpur66qR8DLPOCRJSBv_6iRmzJTm8I6hKhPFtR5y7Vi_Jcmr96Soi1w45T8AtaKfI8V6hth_sCeIHy2lanVLCeCg5FbZbCg5Nc_83XkB8BeVkDV6Hu7xeUilx6v3O7LXHsRPO9vh5jT4aiPxCvwvkUs8QLottNOccu2jBU9e-d9OrM1aTH_px0VL4PdRdPXF_bmh69TJ7_95Q84hb8ujWwDo5BYFTOisALmaKb4dvqz8WfyKjJgtBAT972xcLTf0c_ncjm59DywdO34Wu-48iRflE866e3kRgSaaNZz1xBdljJKV3sfWzmQ0PCO6sWj8RYU5e8URVoQ6CBELAkk8Ig58vA6sTztIJg-blt8T3xhV6C7z1rTsGUmiv-CFFfS3vdyKFCd4URHj1l4EOPNvEtJOIsxIvx2V4ajQRow5YxW9kRuPqC9NIfRjsf1QLA9S_rZ6dy1T-IJYDWBu8urJWXgnBB87ylEkDjLpSLBWZS7G5EWEYSugskeT36MaHVuQMpTxhC4kid9w-4NXlvmRl_sY6v8fM9tcJqxT33zH-IW7puMzb8EQBabxntUE0Smaa2GDElO9KBm6W51zoKTp2ogYS5JmcIy5R5T1IcQdjR7VDY3sfvyGbvpqtCsgRZzdJW49OV2WXH1Yb9_GwoY4wLpN1Vr7W_f_cG5UsxyPRoQuX_Dd-cQCmDY-Z=w417-h314-no?authuser=0" alt="Contact image" class="img-fluid">
+                    <img src="https://photos.google.com/photo/AF1QipMo8WZx5g6MYR0rxII-VudywTrK6pyHnDmxu5Tt#:~:text=21287319%2DF875%2D4686%2D978A%2D031F1F8BCBA2.jpg" alt="Contact image" class="img-fluid">
 
                     <div id="contact" class="pad">
                         <h2 class="tm-section-title">Contact Us</h2>
