--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ http://www.templatemo.com/tm-481-elevate
                 </section>
 
                 <section class="tm-content-box">
-                    <img src="https://photos.google.com/photo/AF1QipMo8WZx5g6MYR0rxII-VudywTrK6pyHnDmxu5Tt#:~:text=21287319%2DF875%2D4686%2D978A%2D031F1F8BCBA2.jpg" alt="Contact image" class="img-fluid">
+                    <img src="21287319-F875-4686-978A-031F1F8BCBA2.jpg" alt="Contact image" class="img-fluid">
 
                     <div id="contact" class="pad">
                         <h2 class="tm-section-title">Contact Us</h2>
