--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ http://www.templatemo.com/tm-481-elevate
                 </section>
 
                 <section class="tm-content-box">
-                    <img src="21287319-F875-4686-978A-031F1F8BCBA2.jpg" alt="Contact image" class="img-fluid">
+                    <img src="img/contact.jpg" alt="Contact image" class="img-fluid">
 
                     <div id="contact" class="pad">
                         <h2 class="tm-section-title">Contact Us</h2>
